--- a/app/views/home/view_item.html.erb
+++ b/app/views/home/view_item.html.erb
@@ -1,1 +1,46 @@
-<p>Hello</p>
+<div>
+	
+	
+	<table class="table table-striped">
+		<caption>
+			<p class="text-center bg-danger">Items awaiting approval</p>
+		</caption>
+		<thead class="bg-info">
+			<tr>
+			<th> Category</th>
+			<th><span class="glyphicon glyphicon-book"></span> Title</th>
+			<th><span class="glyphicon glyphicon-user"></span> Author</th>
+			<th> Edition</th>
+			<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @borrow_requests.where(:status => "Borrow Request").each do |item| %>
+				<tr>
+					<td><%= item.item_category_id %></td>
+					<td><%= item.item_name %></td>
+					<td><%= item.author %></td>
+					<td><%= item.edition %></td>
+					<td>
+						<div class="btn-group">
+							<form action="/home/approve">
+								<input type="text" value = "<%= item.item_id %>" class="hidden" name="passed_item_id_to_approve" />
+								<input type="text" value = "Approved" class="hidden" name="approve_status" />
+								<button class="btn btn-sm btn-success" type="submit">
+									<span class="glyphicon glyphicon-check"></span> Approve
+								</button>
+							</form>
+							<form action="/home/reject">
+								<input type="text" value = "<%= item.item_id %>" name="passed_item_id_to_reject" class="hidden">
+								<input type="text" value = "Rejected" name = "reject_status" class="hidden">
+								<button class="btn btn-sm btn-danger" type = "submit">
+									<span class="glyphicon glyphicon-erase"></span> Reject
+								</button>
+							</form>
+						</div>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+</div>
