--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"> <font size = 14> Library Management System </font> </a>
+                    <a class="navbar-brand" href="#" style="font-family: algerian;"> Library Management System </a>
                 </div>
                 <!-- Initial Search -->
                 <div class="collapse navbar-collapse" id="collapseable_navigation">
@@ -81,7 +81,7 @@
                             <li>
                                 <a href="#">
                                     <span class="glyphicon glyphicon-logout"></span>
-                                    <%= link_to "logout", home_logout_path, :confirm => "Are you sure you want to Logout?" %>
+                                    <%= link_to "logout", home_logout_path, confirm: "Are you sure you want to Logout?" %>
                                 </a>
                             </li>
                         </ul>       		
@@ -114,6 +114,9 @@
                     </li>
                     <li>
                         <%= link_to "Add New Category", home_add_category_path, :class => "glyphicon glyphicon-plus" %>
+                    </li>
+                    <li id="view_requests"">
+                        <%= link_to "View Requests", home_view_item_path, :class => "glyphicon glyphicon-plus" %>
                     </li>
                 </ul>   				
             </nav>
