--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Library Management System</a>
+                <a class="navbar-brand" href="#" style="font-family: algerian;">Library Management System</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
