Added profile aand worked on flash notifications

--- a/app/views/home/add_item.html.erb
+++ b/app/views/home/add_item.html.erb
@@ -7,9 +7,9 @@
 			<%= select_tag(:item_category_id, 
 				options_for_select([
 						['Category',nil],
-						[:option_name, :option_value ],
-						['CDs/DVDs','2'],
-						['Journals/Magazines','3']
+						['Books',1 ],
+						['CDs/DVDs',2],
+						['Journals/Magazines',3]
 					]), 
 					:class => "form-control") 
 			%>	
