--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,6 @@
 
 	<div>
-		<!--
-		<div>
-			<ul class="nav nav-tabs">
-				<%# @item_category.each do |item_list| %>
-					<li>
-						<a href="#item_category" data-toggle="tab">
-							<%#= item_list.name %>	
-						</a>
-					</li>
-				<%# end %>
-			</ul>
-		</div>
-		-->
 
-		<!-- Category i -->
-		<div class="tab-content">
-			<div class="tab-pane fade in active" id="item_category">
 				<div class="table-responsive">
 					<table class="table table-striped">
 						<!--
@@ -26,7 +10,7 @@
 						-->
 						<thead class="bg-info">
 							<tr>
-								<th> Category</th>
+								<th><span class="glyphicon glyphicon-sort-by-attributes"></span> Category</th>
 								<th><span class="glyphicon glyphicon-book"></span> Title</th>
 								<th><span class="glyphicon glyphicon-user"></span> Author</th>
 								<th> Edition</th>
@@ -96,8 +80,6 @@
 						</tbody>						
 					</table>	
 				</div>
-			</div>
-		</div>
 											
 	</div>
 
