--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,4 +1,5 @@
 
+	<!-- Top Row -->
 	<div class="row">
 		<!-- User Details -->
 		
@@ -6,17 +7,20 @@
 			<p class="page-header text-center bg-info">User Details</p>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
-					<span class="glyphicon glyphicon-log-in"></span> Login Name(username): <%= @logged_user.username %>
+					<span class="glyphicon glyphicon-log-in"></span> Login Name(username): <strong><%= @logged_user.username %></strong>
+					<hr>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
-					<span class="glyphicon glyphicon-user"></span> Name: <%= @logged_user.lastname %>, <%= @logged_user.firstname %>
+					<span class="glyphicon glyphicon-user"></span> Name: <strong><%= @logged_user.lastname %>, <%= @logged_user.firstname %></strong>
+					<hr>
 				</div>	
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
-					<span class="glyphicon glyphicon-flash"></span> Privilege Level: <span class="badge"> <%= @logged_user.user_role %> </span>
+					<span class="glyphicon glyphicon-flash"></span> Privilege Level: <span class="badge"><strong> <%= @logged_user.user_role %></strong> </span>
+					<hr>
 				</div>	
 			</div>			
 		</div>
@@ -29,6 +33,9 @@
 		<!-- Fix using Clear Fix -->
 		<!--<div class="clearfix-xs clearfix-sm clearfix-md clearfix-lg"></div>-->
 	</div>
+	<hr>
+
+	<!-- Main Row -->
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12">
 			Span 12
