--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
 
 	<div>
+		<% if flash[:notice] %>
+			<%= flash[:notice] %>
+		<% end %>
 
 				<div class="table-responsive">
 					<table class="table table-striped">
@@ -32,9 +35,15 @@
 
 										<td>
 											<div class="btn-group">
-													<%= link_to "Delete", home_index_path, :class => "btn btn-sm btn-primary" %>
+
+												<button class="btn btn-sm btn-danger"  data-target="#void_reason">
+												<span class="glyphicon glyphicon-trash"></span> <%= link_to "Delete", "/delete/#{item.item_id}" %>
+												</button>
+
+
 												<button class="btn btn-sm btn-success">
-													<span class="glyphicon glyphicon-edit"></span> Edit
+								<span class="glyphicon glyphicon-edit"></span> <%= link_to "Edit Item", "/edit_item/#{item.item_id}" %>
+
 												</button>
 												<form class="form-inline" role="form" action="/home/borrow">
 													<input type="text" class="hidden" value="<%= item.item_id %>" name="passed_item_id_to_borrow">
@@ -77,17 +86,17 @@
 								</tr>
 							<% end %>
 
-						</tbody>						
-					</table>	
+						</tbody>
+					</table>
 				</div>
-											
+
 	</div>
 
 	<script type="text/javascript">
 		function preview (item_id_argument) {
 			// body...
 				previous_viewed_div = document.getElementById("hiddenElement");
-				
+
 				if(previous_viewed_div.innerHTML.length > 0){
                 	document.getElementById(previous_viewed_div.innerHTML).style.visibility = "collapse";
 
@@ -118,7 +127,7 @@
 				</div>
 
 				<div class="modal-body">
-				  <%#= form_tag do %> 
+				  <%#= form_tag do %>
 				  	<%#= text_area_tag :void_reason, params[:void_params], :rows => 4, :cols => 60 %>
 				  <%# end %>
 				  <%#= item.item_category_id %>
@@ -134,7 +143,7 @@
 		</div>
 	</div>
 	-->
-	
+
 
 
 <script type="text/javascript">
