--- a/app/views/home/view_item.html.erb
+++ b/app/views/home/view_item.html.erb
@@ -38,6 +38,7 @@
 					<td><%= item.edition %></td>
 					<td>
 						<div class="btn-group">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 							<form action="/home/approve">
 								<input type="text" value = "<%= item.item_id %>" class="hidden" name="passed_item_id_to_approve" />
 								<input type="text" value = "Approved" class="hidden" name="approve_status" />
@@ -45,13 +46,17 @@
 									<span class="glyphicon glyphicon-check"></span> Approve
 								</button>
 							</form>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 							<form action="/home/reject">
 								<input type="text" value = "<%= item.item_id %>" name="passed_item_id_to_reject" class="hidden">
 								<input type="text" value = "Rejected" name = "reject_status" class="hidden">
 								<button class="btn btn-sm btn-danger" type = "submit">
 									<span class="glyphicon glyphicon-erase"></span> Reject
 								</button>
+
 							</form>
+							</div>
 						</div>
 					</td>
 				</tr>
