--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,10 +1,10 @@
-<body onload="Profile();">
+<body>
 	<!-- Top Row -->
 	<div class="row">
 		<!-- User Details -->
 		
 		<div class="col-lg-4 col-md-4 col-sm-4">
-			<p class="page-header text-center" id="userd">User Details</p>
+			<p class="page-header text-center bg-info">User Details</p>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<span class="glyphicon glyphicon-log-in"></span> Login Name(username): <strong><%= @logged_user.username %></strong>
@@ -48,10 +48,3 @@
 		border: 1px solid grey;
 	}
 </style>
-
-    <script type="text/javascript">
-    function Profile() {
-        // body...
-        document.getElementById("userd").className = "bg-info";
-    }
-    </script>
