--- a/app/views/home/view_item.html.erb
+++ b/app/views/home/view_item.html.erb
@@ -42,7 +42,7 @@
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 							<form action="/home/approve">
 								<input type="text" value = "<%= item.item_id %>" class="hidden" name="passed_item_id_to_approve" />
-								<input type ="text" value ="<%= session[:user_id] %>" class="hidden" name="passed_user_id">
+								<input type ="text" value ="<%= item.user_id %>" class="hidden" name="passed_user_id">
 								<input type="text" value = "Approved" class="hidden" name="approve_status" />
 								<input type="text" value = "<%= item.borrow_id %>" class="hidden" name="passed_borrow_id" />
 								<button class="btn btn-sm btn-success" type="submit">
@@ -52,9 +52,9 @@
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 							<form action="/home/reject">
-								
+
 								<input type="text" value = "<%= item.item_id %>" name="passed_item_id_to_reject" class="hidden">
-								<input type ="text" value ="<%= session[:user_id] %>" class="hidden" name="passed_user_id">
+								<input type ="text" value ="<%= item.user_id %>" class="hidden" name="passed_user_id">
 								<input type="text" value = "Rejected" name = "reject_status" class="hidden">
 								<button class="btn btn-sm btn-danger" type = "submit">
 									<span class="glyphicon glyphicon-erase"></span> Reject
