--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
                 <% end %>
             </div>
         	<div class="col-lg-3 col-md-3 col-sm-3">
-        		<p>Date: <%= @date %></p>
+        		<p>Date: <%= Date.today %></p>
                 <a href="/home/logout" class="btn btn-default"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
         	</div>        	
         </div>
