--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -5,6 +5,7 @@
 		
 		<div class="col-lg-4 col-md-4 col-sm-4">
 			<p class="page-header text-center bg-info">User Details</p>
+			<div style="background-color: #F2F2F2">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<span class="glyphicon glyphicon-log-in"></span> Login Name(username): <strong><%= @logged_user.username %></strong>
@@ -22,7 +23,8 @@
 					<span class="glyphicon glyphicon-flash"></span> Privilege Level: <span class="badge"><strong> <%= @logged_user.user_role %></strong> </span>
 					<hr>
 				</div>	
-			</div>			
+			</div>	
+			</div>		
 		</div>
 
 		<!-- Notifications & Reminders-->
