--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   	<%= csrf_meta_tags %>
+
     <!-- Bootstrap Core CSS -->
     <%= stylesheet_link_tag "bootstrap/bootstrap.min" %>
 
@@ -34,112 +35,74 @@
 
 </head>
 
-<body background="../../../assets/brownbg.jpg" style="background-repeat: no-repeat; background-attachment: fixed">
+<body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container" >
+    
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapseable_navigation">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#" style="font-family: algerian;"> Library Management System </a>
-                </div>
-                <!-- Initial Search -->
-                <div class="collapse navbar-collapse" id="collapseable_navigation">
-                   
-                </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><%= app_name%></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="/services">Services</a>
+                    </li>
+                    
+                    
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="full-width.html">Full Width Page</a>
+                            </li>
+                            <li>
+                                <a href="sidebar.html">Sidebar Page</a>
+                            </li>
+                            <li>
+                                <a href="faq.html">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="404.html">404</a>
+                            </li>
+                            <li>
+                                <a href="pricing.html">Pricing Table</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>	
 
-            <!-- /.navbar-collapse -->
-        </div>
         <!-- /.container -->
     </nav>
 
+    <%= javascript_include_tag "bootstrap/jquery" %>
+    <%= javascript_include_tag "bootstrap/bootstrap.min" %>
+
     <!-- Page Content -->
+    <div class="container">
 
-    <div class="container" style="background-color: #ffffff">
-        <br>
-        <!-- /.row -->
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3">
-                        <button type="button" class="btn btn-primary">
-                            Logged in as <%= @logged_user.username %> 
-                            <span class="glyphicon glyphicon-user"></span>
-                        </button>      		
-            </div>        
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <%= form_tag do %>
-                    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search by title" %>                    
-                <% end %>
+            <div class="col-lg-12 text-center">
+                <%= yield %>
             </div>
-        	<div class="col-lg-3 col-md-3 col-sm-3">
-        		<p>Date: <%= @date %></p>
-                <a href="/home/logout" class="btn btn-default"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-        	</div>        	
         </div>
-        <br>
         <!-- /.row -->
-        <% if @logged_user.user_role == 'Administrator' %>
-            <nav class="">			
-                <ul class="nav nav-pills nav-justified">
-                    <li class="active"> 
-                        <a href="/home/index"><span class="glyphicon glyphicon-home"></span> Home</a> 
-                    </li>
-                    <li id="view_requests" onclick="nav_active_link();">
-                        <a href="/home/view_item"><span class="glyphicon glyphicon-eye-close"></span> View Requests</a> 
-                    </li>
-                    <li>
-                        <a href="/home/profile"><span class="glyphicon glyphicon-user"></span> Profile</a>
-                    </li>
-                    <li>
-                        <a href="/home/add_item"><span class="glyphicon glyphicon-plus"></span> Add Item</a>
-                    </li>
-                    <li>
-                        <a href="/home/add_user"><span class="glyphicon glyphicon-plus"></span> Add User</a>
-                    </li>
-                    <li>
-                        <a href="/home/add_category"><span class="glyphicon glyphicon-plus"></span> Add New Category</a>
-                    </li>
-                </ul>   				
-            </nav>
-        <% end %>
-
-
-        <% if @logged_user.user_role == 'staff' %>
-                  
-                <ul class="nav nav-pills nav-justified">
-                    <li class="active">  
-                        <a href="/home/index"><span class="glyphicon glyphicon-home"></span> Home</a> 
-                    </li>
-                    <li id="Profile">
-                        <a href="/home/profile"><span class="glyphicon glyphicon-user"></span> Profile</a>
-                    </li>
-                </ul>                   
-            
-        <% end %>
-        <hr>
-
-        <!-- /.row -->
-        <%= yield %>
 
     </div>
     <!-- /.container -->
-    <footer class="container" style="background-color: black;">
-        <div class="pull-left">
-            <a href="http://baobabhealth.org/"> &copy; Baobab Health Trust <sub>2015</sub></a>
-        </div>
-    </footer>
-
-    <!-- jQuery Version 1.11.1 -->
-    <%= javascript_include_tag "bootstrap/jquery" %>
-
-    <!-- Bootstrap Core JavaScript -->
-    <%= javascript_include_tag "bootstrap/bootstrap.min" %>
-
 
 </body>
 
