--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 		<% end %>
 
 
-				<div class="table-responsive">
+				<div class="table-responsive"> <!-- This is commented using vim -->
 					<table class="table table-striped">
 						<!--
 						<caption>
