--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,174 +1,48 @@
+<style type="text/css">
+	a{
+		decoration: none;
+	}
+	.row{
+		margin-top: 2em;
+	}
 
+	.stat span {
+    font-size: 80px;
 
-	<div>
-		<% if flash[:notice] %>
-			<%= flash[:notice] %>
-		<% end %>
-
-
-				<div class="table-responsive">
-					<table class="table table-striped">
-						<!--
-						<caption>
-							Item Table
-						</caption>
-						-->
-						<thead class="bg-info">
-							<tr>
-								<th><span class="glyphicon glyphicon-sort-by-attributes"></span> Category</th>
-								<th><span class="glyphicon glyphicon-book"></span> Title</th>
-								<th><span class="glyphicon glyphicon-user"></span> Author</th>
-								<th> Edition</th>
-								<th>Action</th>
-							</tr>
-						</thead>
-						<tbody>
-							<% @items.where(:void => 0).each do |item| %>
-								<tr>
-
-									<td><%= item.item_category.name %></td>
-									<td><%= item.item_name %></td>
-									<td><%= item.author %></td>
-									<td><%= item.edition %></td>
-									<% if @logged_user.user_role == 'Administrator' %>
-										<!-- Admin actions to an item-->
-
-
-
-										<td>
-
-											<div class="btn-group">
-
-
-											<div class="row btn-group">
-											<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-													<button class="btn btn-sm btn-primary" onclick="preview(<%= item.item_id %>);">
-														<span class="glyphicon glyphicon-eye-open"></span> Preview
-
-													</button>
-												</div>
-												<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-													<form class="form-inline" role="form" action="/home/borrow">
-														<input type="text" class="hidden" value="<%= item.item_id %>" name="passed_item_id_to_borrow">
-														<input type ="text" value ="<%= session[:user_id] %>" class="hidden" name="passed_user_id">
-														<input type="text" class="hidden" value="Borrow Request" name="borrow_status">
-														<button class="btn btn-sm btn-warning" type="submit" onclick="borrow();">
-															<span class="glyphicon glyphicon-thumbs-up"></span> Borrow
-														</button>
-													</form>
-												</div>
-												<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-													<button class="btn btn-sm btn-success">
-													<span class="glyphicon glyphicon-edit"></span> <%= link_to "Edit Item", "/edit_item/#{item.item_id}" %>
-
-													</button>
-												</div>
-												<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-													<button class="btn btn-sm btn-danger">
-													<span class="glyphicon glyphicon-trash"></span> <%= link_to "Delete", "/delete/#{item.item_id}" %>
-													</button>
-												</div>
-												
-												
-												
-											</div>
-										</td>
-									<% else %>
-										<!-- Staff actions to an item -->
-										<td>
-
-											<div class="btn-group">
-												<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-													<button class="btn btn-sm btn-primary" onclick="preview(<%= item.item_id %>);">
-														<span class="glyphicon glyphicon-eye-open"></span> Preview
-													</button>
-												</div>
-												<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-													<form class="form" role="form" action="/home/borrow">
-														<input type="text" class="hidden" value="<%= item.item_id %>" name="passed_item_id_to_borrow">
-														<input type ="text" value ="<%= session[:user_id] %>" class="hidden" name="passed_user_id">
-														<button class="btn btn-sm btn-success" type="submit" onclick="borrow();">
-															<span class="glyphicon glyphicon-thumbs-up"></span> Borrow
-														</button>
-													</form>
-												</div>
-												<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-													<button class="btn btn-sm btn-warning">
-														<span class="glyphicon glyphicon-calendar"></span> Book
-													</button>
-												</div>
-											</div>
-										</td>
-						      		<% end %>
-								</tr>
-								<tr id="<%= item.item_id %>" style="visibility: collapse; font-style: italic;" class="text-info";>
-									<td colspan="5">
-											<%= item.item_name %>, <%= item.edition %> edition.
-											Published <%= item.year %>. Author: <%= item.author %>. <%= item.description %>
-									</td>
-								</tr>
-							<% end %>
-
-						</tbody>
-					</table>
-				</div>
-
-	</div>
-
-	<script type="text/javascript">
-		function preview (item_id_argument) {
-			// body...
-				previous_viewed_div = document.getElementById("hiddenElement");
-
-				if(previous_viewed_div.innerHTML.length > 0){
-                	document.getElementById(previous_viewed_div.innerHTML).style.visibility = "collapse";
-
-                }
-
-				document.getElementById(item_id_argument).style.visibility = "inherit";
-
-				previous_viewed_div.innerHTML = item_id_argument;
-		}
-
-		function borrow () {
-			// body...
-			alert("Request to borrow item successfully sent. Await approval.");
-		}
-	</script>
-
-	<div id="hiddenElement" style="visibility: hidden;"></div>
-
-	<!-- Void Reason Modal -->
-<!--
-<div class="modal" id="void_reason" tabindex="-1" role="dialog" aria-labelledby="void_reason_label" aria-hidden="true" style="padding: 150px;">
-			<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times	</button>
-
-				  	<h4 class="modal-title" id="void_reason_label"> Void Reason</h4>
-				</div>
-
-				<div class="modal-body">
-				  <%#= form_tag do %>
-				  	<%#= text_area_tag :void_reason, params[:void_params], :rows => 4, :cols => 60 %>
-				  <%# end %>
-				  <%#= item.item_category_id %>
-				</div>
-
-				<div class="modal-footer">
-					 <button type="button" class="btn btn-default" data-dismiss="modal"> Cancel </button>
-
-					 <button type="button" class="btn btn-danger"> Delete </button>
-
-				</div>
-			</div>
+	}
+    .stat_border{
+    	border: 1px solid grey;
+    	padding: 10px;
+    	margin: 0.1em;
+  	}
+</style>
+<div class="row">
+	<form class="form">
+		<div class="input-group">
+			<input type="text" name="search" placeholder="Search" class="form-control" /> 
+			<span class="input-group-addon btn btn-success"><button>Search</button></span>
 		</div>
-	</div>
-	-->
+		
+	</form>
+</div>
+<div class="row stat">
+<%# @item_stats.each do |stat| %>
+	
+<%# end %>
+ <% @item_category.each do |categories| %>
+ <%#= categories.item_category_id %>
+ 	
 
-
-
-<script type="text/javascript">
-$('void_reason').modal();
-</script>
+	<form method="get" action="/search/view">
+		<input type="hidden" value="<%= categories.item_category_id %>" name="category_id" />
+		<button class=" col-lg-3 col-md-3 col-sm-3  stat_border ">
+			<span class="badge">
+				<%= 
+				sql = "SELECT item_category_id FROM item WHERE item_category_id = #{categories.item_category_id}"
+				Item.find_by_sql(sql).count %>
+			</span>
+			<p class="text-center"><%= categories.name %></p>	
+		</button>
+	</form>
+	<% end %>
+</div>
