--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,20 +66,18 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="full-width.html">Full Width Page</a>
+                                <a href="/home/add_category">Add Category</a>
                             </li>
                             <li>
-                                <a href="sidebar.html">Sidebar Page</a>
+                                <a href="/home/add_item">Add Item</a>
                             </li>
                             <li>
-                                <a href="faq.html">FAQ</a>
+                                <a href="/home/add_user">Add User</a>
                             </li>
                             <li>
-                                <a href="404.html">404</a>
+                                <a href="/home/profile">Profile</a>
                             </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
+                            
                         </ul>
                     </li>
                 </ul>
