--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a href="#about.html">About</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
                         <a href="/services">Services</a>
