--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,15 +57,15 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a href="/">Home</a>
+                        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
                     </li>
                     <li>
-                        <a href="/services">Services</a>
+                        <a href="/services"><span class="glyphicon glyphicon-dashboard"></span> Services</a>
                     </li>
                     
                     
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-wrench"></span> Settings<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="/home/add_category">Add Category</a>
