Final edit of working system.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,8 +76,12 @@
                             <li>
                                 <a href="/home/add_user">Add User</a>
                             </li>
+                            <li class="divider"></li>
                             <li>
                                 <a href="/home/profile">Profile</a>
+                            </li>
+                            <li>
+                                <a href="/home/logout">Logout</a>
                             </li>
                             
                         </ul>
