--- a/app/views/home/add_category.html.erb
+++ b/app/views/home/add_category.html.erb
@@ -5,25 +5,16 @@
 	<%= form_for(:item, :url => {:controller => 'home', :action => 'add_category'}) do %>
 		
 		<div class="form-group">
-			<%#= label_tag("Publisher") %>
+			<%= label_tag("Category Name") %>
 			<%= text_field_tag(:name, nil, :placeholder => "Name", :class => "form-control") %>
 		</div>
 		
 		<div class="form-group">
-			<%#= label_tag("Edition") %>
+			<%= label_tag("Description") %>
 			<%= text_field_tag(:cat_description, nil, :placeholder => "description", :class => "form-control") %>
 		</div>
 		
-		<!-- To be included in the Delete Action 
-		<div class="form-group">
-			<%#= label_tag("Void") %>
-			<%#= text_field_tag(:void, nil, :placeholder => "Void", :class => "form-control") %>
-		</div>
-		<div class="form-group">
-			<%#= label_tag("Void Reason") %>
-			<%#= text_area_tag(:void_reason, nil, :placeholder => "Void Reason", :class => "form-control") %>
-		</div>
-		-->
+		
 		<%= submit_tag("Add Category", :class => "btn btn-success") %>
 	<% end %>
 	<hr>
