Removed Book(ing) functionality for the meantime.

--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -35,22 +35,18 @@
 
 </style>
 
-<div class="container-menu-options">
-  <div class="row">
-    <div class="col">
-      <a href="/search/borrow"><span class="glyphicon glyphicon-thumbs-up"></span> <br />Borrow</a>
-    </div>
-    <div class="col">
-      <a href="/search/return"><span class="glyphicon glyphicon-thumbs-up"></span> <br />Return</a>
-    </div>
-    <div class="col">
-      <a href="#"><span class="glyphicon glyphicon-calendar"></span> <br />Book</a>
-    </div>
-    <div class="col">
-      <a href="/search/request"><span class="glyphicon glyphicon-thumbs-up"></span> <br />View request</a>
-    </div>
-  </div>
 
-  </div>
-
+<div class="container">
+	<div class="container-menu-options">
+    		<div class="col">
+      			<a href="/search/borrow"><span class="glyphicon glyphicon-thumbs-up"></span> <br />Borrow</a>
+    		</div>
+    		<div class="col">
+      			<a href="/search/return"><span class="glyphicon glyphicon-thumbs-up"></span> <br />Return</a>
+    		</div>
+    		<div class="col">
+      			<a href="/search/request"><span class="glyphicon glyphicon-thumbs-up"></span> <br />View request</a>
+    		</div>
+		<hr>
+	</div>
 </div>
