changed add_item interface

--- a/app/views/home/add_category.html.erb
+++ b/app/views/home/add_category.html.erb
@@ -1,6 +1,6 @@
 
 
-	<p class="page-header text-center">Fill in the Details to add an Item Category</p>
+	<p class="page-header text-center"> <font size="5"> <b>  Fill in the Details to add an Item Category </b> </font> </p>
 
 	<%= form_for(:item, :url => {:controller => 'home', :action => 'add_category'}) do %>
 		
